Refactor datapack and predicates generation for Paper API update
Updated Paper API dependency to 1.21.10 and refactored OraxenDatapack to use new Paper Datapack API methods. Improved code consistency in PredicatesGenerator by adding final modifiers and updating variable declarations. These changes ensure compatibility with the latest Paper API and improve code readability.