@@ -1,16 +1,13 @@
 package io.th0rgal.oraxen.pack.generation;
 
-import io.th0rgal.oraxen.utils.VirtualFile;
+import com.google.gson.JsonObject;
+import io.papermc.paper.datapack.Datapack;
 import io.th0rgal.oraxen.utils.VersionUtil;
-
+import io.th0rgal.oraxen.utils.VirtualFile;
+import net.kyori.adventure.key.Key;
 import org.apache.commons.io.FileUtils;
 import org.bukkit.Bukkit;
 import org.bukkit.World;
-import org.bukkit.packs.DataPack;
-
-import com.google.gson.JsonObject;
-
-import net.kyori.adventure.key.Key;
 
 import java.io.File;
 import java.io.IOException;
@@ -18,18 +15,18 @@ import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 public abstract class OraxenDatapack {
-    protected static final World defaultWorld = Bukkit.getWorlds().get(0);
+    protected static final World defaultWorld = Bukkit.getWorlds().getFirst();
     protected final File datapackFolder;
     protected final JsonObject datapackMeta = new JsonObject();
     protected final boolean isFirstInstall;
     protected final boolean datapackEnabled;
     protected final String name;
 
-    protected OraxenDatapack(String name, String description, int packFormat) {
+    protected OraxenDatapack(final String name, final String description, final int packFormat) {
         this.datapackFolder = defaultWorld.getWorldFolder().toPath()
                 .resolve("datapacks/" + name).toFile();
 
-        JsonObject data = new JsonObject();
+        final JsonObject data = new JsonObject();
         data.addProperty("description", description);
         data.addProperty("pack_format", packFormat);
         datapackMeta.add("pack", data);
@@ -41,10 +38,10 @@ public abstract class OraxenDatapack {
 
     protected void writeMCMeta() {
         try {
-            File packMeta = datapackFolder.toPath().resolve("pack.mcmeta").toFile();
+            final File packMeta = datapackFolder.toPath().resolve("pack.mcmeta").toFile();
             packMeta.createNewFile();
             FileUtils.writeStringToFile(packMeta, datapackMeta.toString(), StandardCharsets.UTF_8);
-        } catch (IOException e) {
+        } catch (final IOException e) {
             e.printStackTrace();
         }
     }
@@ -52,7 +49,7 @@ public abstract class OraxenDatapack {
     public void clearOldDataPack() {
         try {
             FileUtils.deleteDirectory(datapackFolder);
-        } catch (IOException e) {
+        } catch (final IOException e) {
             e.printStackTrace();
         }
     }
@@ -62,33 +59,24 @@ public abstract class OraxenDatapack {
     public abstract void generateAssets(List<VirtualFile> output);
 
     protected boolean isFirstInstall() {
-        return Bukkit.getDataPackManager().getDataPacks().stream()
-                .filter(d -> d.getKey() != null)
-                .noneMatch(d -> getDatapackKey().equals(Key.key(d.getKey().toString())));
+        return Bukkit.getDatapackManager().getPacks().stream()
+                .noneMatch(d -> d.getName().equals(this.name));
     }
 
     protected boolean isDatapackEnabled() {
-        for (DataPack dataPack : Bukkit.getDataPackManager().getEnabledDataPacks(defaultWorld)) {
-            if (dataPack.getKey() == null)
-                continue;
-            if (dataPack.getKey().equals(getDatapackKey()))
-                return true;
-        }
-        for (DataPack dataPack : Bukkit.getDataPackManager().getDisabledDataPacks(defaultWorld)) {
-            if (dataPack.getKey() == null)
-                continue;
-            if (dataPack.getKey().equals(getDatapackKey()))
-                return true;
+        for (final Datapack dataPack : Bukkit.getDatapackManager().getPacks()) {
+            if (!dataPack.getName().equals(this.name)) continue;
+            return true;
         }
         return false;
     }
 
-    protected void enableDatapack(boolean enabled) {
+    protected void enableDatapack(final boolean enabled) {
         if (VersionUtil.isPaperServer()) {
             Bukkit.getDatapackManager().getPacks().stream()
-                    .filter(d -> d.getName() == this.name)
+                    .filter(datapack -> datapack.getName().equals(this.name))
                     .findFirst()
-                    .ifPresent(d -> d.setEnabled(enabled));
+                    .ifPresent(datapack -> datapack.setEnabled(true));
         }
     }
 
